@@ -3,6 +3,7 @@ package com.petpick.petpick.controller;
 
 import java.time.LocalDate;
 import java.util.List;
+import java.util.Map;
 
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
@@ -11,15 +12,7 @@ import org.springframework.data.domain.Sort;
 import org.springframework.data.jpa.domain.Specification;
 import org.springframework.format.annotation.DateTimeFormat;
 import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.CrossOrigin;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.PatchMapping;
-import org.springframework.web.bind.annotation.PathVariable;
-import org.springframework.web.bind.annotation.RequestBody;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RequestMethod;
-import org.springframework.web.bind.annotation.RequestParam;
-import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.bind.annotation.*;
 
 import com.petpick.petpick.admin.AdminOrderSpecs;
 import com.petpick.petpick.dto.OrderDTO;
@@ -52,18 +45,19 @@ public class AdminOrdersController {
             @RequestParam(required = false) @DateTimeFormat(iso = DateTimeFormat.ISO.DATE) LocalDate dateFrom,
             @RequestParam(required = false) @DateTimeFormat(iso = DateTimeFormat.ISO.DATE) LocalDate dateTo,
             @RequestParam(defaultValue = "1") int page,
-            @RequestParam(defaultValue = "10") int size
-    ) {
+            @RequestParam(defaultValue = "10") int size) {
+
         page = Math.max(page, 1);
         size = Math.max(size, 1);
         Pageable pageable = PageRequest.of(page - 1, size, Sort.by(Sort.Direction.DESC, "createdAt"));
 
-        Specification<Order> spec = Specification.allOf(
-                AdminOrderSpecs.keyword(q),
-                AdminOrderSpecs.statusEq(status),
-                AdminOrderSpecs.delivery(delivery),
-                AdminOrderSpecs.dateRange(dateFrom, dateTo)
-        );
+        // 相容所有 Spring Data 版本的 where/and 寫法
+        Specification<Order> spec = Specification
+            .where(AdminOrderSpecs.keyword(q))
+            .and(AdminOrderSpecs.statusEq(status))
+            .and(AdminOrderSpecs.delivery(delivery))
+            .and(AdminOrderSpecs.dateRange(dateFrom, dateTo));
+
         Page<Order> p = orderRepo.findAll(spec, pageable);
         return p.map(o -> {
             OrderSummaryDTO dto = new OrderSummaryDTO();
@@ -78,6 +72,9 @@ public class AdminOrdersController {
             dto.setStoreName(o.getStoreName());
             dto.setStoreAddress(o.getStoreAddress());
             dto.setStoreBrand(o.getStoreBrand());
+            dto.setPaidAt(o.getPaidAt());
+            dto.setPaymentGateway(o.getPaymentGateway()); // 給前端顯示付款方式/來源
+            dto.setTradeNo(o.getTradeNo());
             return dto;
         });
     }
@@ -88,17 +85,19 @@ public class AdminOrdersController {
         return queryService.getOne(orderId);
     }
 
-    // 單筆更新狀態
+    // 單筆更新狀態（例如：Pending → Shipped / Cancelled）
     @PatchMapping("/{orderId}/status")
-    public void updateStatus(@PathVariable Integer orderId, @RequestBody UpdateOrderStatusRequest req) {
+    public ResponseEntity<Map<String, Object>> updateStatus(@PathVariable Integer orderId,
+                                                            @RequestBody UpdateOrderStatusRequest req) {
         orderService.updateStatus(orderId, req);
+        return ResponseEntity.ok(Map.of("ok", true));
     }
 
     // 批次狀態
-    @RequestMapping(value = "/bulk-status", method = RequestMethod.POST)
-    public void bulk(@RequestBody BulkStatusReq req) {
+    @PostMapping("/bulk-status")
+    public ResponseEntity<Map<String, Object>> bulk(@RequestBody BulkStatusReq req) {
         if (req == null || req.orderIds == null || req.orderIds.isEmpty()) {
-            return;
+            return ResponseEntity.badRequest().body(Map.of("ok", false, "message", "orderIds is empty"));
         }
         for (Integer id : req.orderIds) {
             UpdateOrderStatusRequest u = new UpdateOrderStatusRequest();
@@ -106,38 +105,40 @@ public class AdminOrdersController {
             u.setNote(req.note);
             orderService.updateStatus(id, u);
         }
+        return ResponseEntity.ok(Map.of("ok", true));
     }
 
-    // 人工標記已付款
-    @RequestMapping(value = "/{orderId}/mark-paid", method = RequestMethod.POST)
-    public void markPaid(@PathVariable Integer orderId, @RequestBody MarkPaidReq req) {
-        String gw = (req.gateway == null || req.gateway.isBlank()) ? "Manual" : req.gateway;
-        String tn = req.tradeNo == null ? "" : req.tradeNo;
-        int amt = Math.max(0, req.paidAmount == null ? 0 : req.paidAmount);
+    // 人工標記已付款（同時寫入 paymentGateway / tradeNo / paidAmount）
+    @PostMapping("/{orderId}/mark-paid")
+    public ResponseEntity<Map<String, Object>> markPaid(@PathVariable Integer orderId,
+                                                        @RequestBody MarkPaidReq req) {
+        String gw = (req == null || isBlank(req.getGateway())) ? "Manual" : req.getGateway().trim();
+        String tn = (req == null || req.getTradeNo() == null) ? "" : req.getTradeNo().trim();
+        int amt = (req == null || req.getPaidAmount() == null) ? 0 : Math.max(0, req.getPaidAmount());
+
+        // 關鍵：統一走 onPaymentSucceeded，確保 paymentGateway 等欄位會被正確寫入
         orderService.onPaymentSucceeded(orderId, gw, tn, amt);
+        return ResponseEntity.ok(Map.of("ok", true));
     }
 
-    // === 設定物流（同時支援 POST / PATCH；兼容 ShipmentNo → trackingNo） ===
-    @RequestMapping(
-        value = "/{orderId}/logistics",
-        method = { RequestMethod.POST, RequestMethod.PATCH }
-    )
+    // 設定物流（同時支援 POST / PATCH；兼容 ShipmentNo → trackingNo）
+    @RequestMapping(value = "/{orderId}/logistics", method = { RequestMethod.POST, RequestMethod.PATCH })
     public ResponseEntity<Void> setLogistics(@PathVariable Integer orderId,
                                              @RequestBody LogisticsReq req) {
-        // 兼容：外部若誤用 ShipmentNo 鍵名，也一併接住；標準鍵名仍為 trackingNo
-        final String logisticsId = trimOrNull(req.getLogisticsId());
-        final String trackingNo  = firstNonBlank(trimOrNull(req.getTrackingNo()),
-                                                 trimOrNull(req.getShipmentNo()));
+        final String logisticsId = trimToNull(req.getLogisticsId());
+        // 若外部誤用 shipmentNo，也接住；標準鍵名仍為 trackingNo
+        final String trackingNo = firstNonBlank(trimToNull(req.getTrackingNo()), trimToNull(req.getShipmentNo()));
 
-        // 交給 service（@Transactional 內只在值有變時更新，避免把 NULL 蓋成 ""）
         orderService.setLogisticsInfo(orderId, logisticsId, trackingNo);
         return ResponseEntity.noContent().build(); // 204
     }
 
     // 取消
-    @RequestMapping(value = "/{orderId}/cancel", method = RequestMethod.POST)
-    public void cancel(@PathVariable Integer orderId, @RequestBody CancelReq req) {
-        orderService.cancel(orderId, req.reason);
+    @PostMapping("/{orderId}/cancel")
+    public ResponseEntity<Map<String, Object>> cancel(@PathVariable Integer orderId,
+                                                      @RequestBody CancelReq req) {
+        orderService.cancel(orderId, req == null ? null : req.getReason());
+        return ResponseEntity.ok(Map.of("ok", true));
     }
 
     // ====== DTOs ======
@@ -150,7 +151,7 @@ public class AdminOrdersController {
 
     @Data
     public static class MarkPaidReq {
-        private String gateway;
+        private String gateway;    // 前端送的是 gateway（不是 paymentGateway）
         private String tradeNo;
         private Integer paidAmount;
     }
@@ -158,8 +159,8 @@ public class AdminOrdersController {
     @Data
     public static class LogisticsReq {
         private String logisticsId;
-        private String trackingNo;  // 標準鍵名（前端 / 系統內部使用）
-        private String shipmentNo;  // 兼容鍵名（若前端/外部誤用 ShipmentNo 也能吃）
+        private String trackingNo; // 標準鍵名（前端 / 系統內部使用）
+        private String shipmentNo; // 兼容鍵名（若前端/外部誤用 ShipmentNo 也能吃）
     }
 
     @Data
@@ -168,12 +169,17 @@ public class AdminOrdersController {
     }
 
     // ===== helpers =====
-    private static String trimOrNull(String s) {
+    private static String trimToNull(String s) {
         if (s == null) return null;
         String t = s.trim();
         return t.isEmpty() ? null : t;
     }
+
     private static String firstNonBlank(String a, String b) {
-        return a != null && !a.isBlank() ? a : (b != null && !b.isBlank() ? b : null);
+        return (a != null && !a.isBlank()) ? a : ((b != null && !b.isBlank()) ? b : null);
+    }
+
+    private static boolean isBlank(String s) {
+        return s == null || s.trim().isEmpty();
     }
 }
